     (Vincent Ladeuil)

   * ``reconfigure`` can now convert from repositories.  (Aaron Bentley)

   * ``-l`` is now a short form for ``--limit`` in ``log``.  (Matt Nordhoff)

   * ``merge`` now warns when merge directives cause cherrypicks.
     (Aaron Bentley)

   * ``split`` now supported, to enable splitting large trees into smaller
     pieces.  (Aaron Bentley)

  BUGFIXES:

   * Avoid AttributeError when unlocking a pack repository when an error occurs.
     (Martin Pool, #180208)

   * Better handle short reads when processing multiple range requests.
     (Vincent Ladeuil, #179368)

   * build_tree acceleration uses the correct path when a file has been moved.
     (Aaron Bentley)

   * ``commit`` now succeeds when a checkout and its master branch share a
     repository.  (Aaron Bentley, #177592)

   * Fixed error reporting of unsupported timezone format in
     ``log --timezone``. (Lukáš Lalinský, #178722)

   * Fixed Unicode encoding error in ``ignored`` when the output is
     redirected to a pipe. (Lukáš Lalinský)

   * Fix traceback when sending large response bodies over the smart protocol
     on Windows. (Andrew Bennetts, #115781)

   * Fix ``urlutils.relative_url`` for the case of two ``file:///`` URLs
     pointed to different logical drives on Windows.
     (Alexander Belchenko, #90847)

   * HTTP test servers are now compatible with the http protocol version 1.1.
     (Vincent Ladeuil, #175524)

   * _KnitParentsProvider.get_parent_map now handles requests for ghosts
     correctly, instead of erroring or attributing incorrect parents to ghosts.
     (Aaron Bentley)

   * ``merge --weave --uncommitted`` now works.  (Aaron Bentley)

   * pycurl authentication handling was broken and incomplete. Fix handling of
     user:pass embedded in the urls.
     (Vincent Ladeuil, #177643)

   * Files inside non-directories are now handled like other conflict types.
     (Aaron Bentley, #177390)
